--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 /*.ez
 *.*~
 *.log
-
+*.old
+*.elmi
+*.elmo
 # Generate on crash by the VM
 erl_crash.dump
 
@@ -14,6 +16,7 @@ erl_crash.dump
 /web/elm/elm-stuff/*.json
 /web/elm/elm-stuff/packages
 /web/elm/elm-stuff/build-artifacts
+/web/elm/elm.js
 # Since we are building assets from web/static,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
