--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ erl_crash.dump
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+/web/static/vendor
 
 # The config/prod.secret.exs file by default contains sensitive
 # data and you should not commit it into version control.
